# nolerr-os

./: CMakeLists.txt  INIT.h  License  Makefile  README.md  bild.bat  build.bat  clearwin.h  help.py  main.c
additions/: calculator.c  infos.c  notich.c  timenow.c
additions/calculator/: calculator.c  exitfunc.h
additions/help/: help.c  help.py
additions/notich/: notich.c
additions/wearth/: getWearth.c
file/: workfile.h  workfiles.c
interface/: interface.c  interface.h
language/: locale_managere.c
libraru/: brbr.h  initlibery.h
